--- a/GD32_I2C_CAN.uvprojx
+++ b/GD32_I2C_CAN.uvprojx
@@ -10,14 +10,14 @@
       <TargetName>GD32C_CAN</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
-      <pCCUsed>6180000::V6.18::ARMCLANG</pCCUsed>
+      <pCCUsed>6190000::V6.19::ARMCLANG</pCCUsed>
       <uAC6>1</uAC6>
       <TargetOption>
         <TargetCommonOption>
           <Device>GD32C103CB</Device>
           <Vendor>GigaDevice</Vendor>
-          <PackID>GigaDevice.GD32C10x_DFP.1.0.0</PackID>
-          <PackURL>http://gd32mcu.com/data/documents/pack/</PackURL>
+          <PackID>GigaDevice.GD32C10x_DFP.1.0.1</PackID>
+          <PackURL>https://gd32mcu.com/data/documents/pack/</PackURL>
           <Cpu>IRAM(0x20000000,0x08000) IROM(0x08000000,0x020000) CPUTYPE("Cortex-M4") FPU2 CLOCK(12000000) ELITTLE</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
           <StartupFile></StartupFile>
@@ -340,7 +340,7 @@
               <MiscControls></MiscControls>
               <Define>GD32C10X_MD, __FPU_PRESENT</Define>
               <Undefine></Undefine>
-              <IncludePath>.\CMSIS;.\GD32C10x-Firmware\Include;.\Application;.\CMSIS\GD\GD32C10x\Include;.\GD32C10x-Peripherals</IncludePath>
+              <IncludePath>.\GD32C10x\CMSIS;.\GD32C10x\Peripherals\inc;.\inc</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -382,36 +382,6 @@
       </TargetOption>
       <Groups>
         <Group>
-          <GroupName>CMSIS</GroupName>
-          <Files>
-            <File>
-              <FileName>system_gd32c10x.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\CMSIS\GD\GD32C10x\Source\system_gd32c10x.c</FilePath>
-            </File>
-          </Files>
-        </Group>
-        <Group>
-          <GroupName>Application</GroupName>
-          <Files>
-            <File>
-              <FileName>main.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\Application\main.c</FilePath>
-            </File>
-            <File>
-              <FileName>gd32c10x_it.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\Application\gd32c10x_it.c</FilePath>
-            </File>
-            <File>
-              <FileName>dual_dfs.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\Application\dual_dfs.h</FilePath>
-            </File>
-          </Files>
-        </Group>
-        <Group>
           <GroupName>Docs</GroupName>
           <Files>
             <File>
@@ -422,147 +392,167 @@
           </Files>
         </Group>
         <Group>
-          <GroupName>GD32C10x-Peripherals</GroupName>
+          <GroupName>src</GroupName>
           <Files>
             <File>
-              <FileName>i2c.c</FileName>
+              <FileName>gd32c10x_it.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\GD32C10x-Peripherals\i2c.c</FilePath>
-            </File>
-            <File>
-              <FileName>can.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\GD32C10x-Peripherals\can.c</FilePath>
+              <FilePath>.\src\gd32c10x_it.c</FilePath>
             </File>
             <File>
               <FileName>systick.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\GD32C10x-Peripherals\systick.c</FilePath>
+              <FilePath>.\src\systick.c</FilePath>
+            </File>
+            <File>
+              <FileName>can.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\can.c</FilePath>
+            </File>
+            <File>
+              <FileName>i2c.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\i2c.c</FilePath>
+            </File>
+            <File>
+              <FileName>main.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\main.c</FilePath>
+            </File>
+            <File>
+              <FileName>dual_dfs.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\inc\dual_dfs.h</FilePath>
             </File>
           </Files>
         </Group>
         <Group>
-          <GroupName>GD32C10x-Firmware</GroupName>
+          <GroupName>CMSIS</GroupName>
+          <Files>
+            <File>
+              <FileName>startup__gd32c10x.s</FileName>
+              <FileType>2</FileType>
+              <FilePath>.\GD32C10x\CMSIS\startup__gd32c10x.s</FilePath>
+            </File>
+            <File>
+              <FileName>system_gd32c10x.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\GD32C10x\CMSIS\system_gd32c10x.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>Peripherals</GroupName>
           <Files>
             <File>
               <FileName>gd32c10x_adc.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\GD32C10x-Firmware\Source\gd32c10x_adc.c</FilePath>
+              <FilePath>.\GD32C10x\Peripherals\src\gd32c10x_adc.c</FilePath>
             </File>
             <File>
               <FileName>gd32c10x_bkp.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\GD32C10x-Firmware\Source\gd32c10x_bkp.c</FilePath>
+              <FilePath>.\GD32C10x\Peripherals\src\gd32c10x_bkp.c</FilePath>
             </File>
             <File>
               <FileName>gd32c10x_can.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\GD32C10x-Firmware\Source\gd32c10x_can.c</FilePath>
+              <FilePath>.\GD32C10x\Peripherals\src\gd32c10x_can.c</FilePath>
             </File>
             <File>
               <FileName>gd32c10x_crc.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\GD32C10x-Firmware\Source\gd32c10x_crc.c</FilePath>
+              <FilePath>.\GD32C10x\Peripherals\src\gd32c10x_crc.c</FilePath>
             </File>
             <File>
               <FileName>gd32c10x_ctc.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\GD32C10x-Firmware\Source\gd32c10x_ctc.c</FilePath>
+              <FilePath>.\GD32C10x\Peripherals\src\gd32c10x_ctc.c</FilePath>
             </File>
             <File>
               <FileName>gd32c10x_dac.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\GD32C10x-Firmware\Source\gd32c10x_dac.c</FilePath>
+              <FilePath>.\GD32C10x\Peripherals\src\gd32c10x_dac.c</FilePath>
             </File>
             <File>
               <FileName>gd32c10x_dbg.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\GD32C10x-Firmware\Source\gd32c10x_dbg.c</FilePath>
+              <FilePath>.\GD32C10x\Peripherals\src\gd32c10x_dbg.c</FilePath>
             </File>
             <File>
               <FileName>gd32c10x_dma.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\GD32C10x-Firmware\Source\gd32c10x_dma.c</FilePath>
+              <FilePath>.\GD32C10x\Peripherals\src\gd32c10x_dma.c</FilePath>
             </File>
             <File>
               <FileName>gd32c10x_exmc.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\GD32C10x-Firmware\Source\gd32c10x_exmc.c</FilePath>
+              <FilePath>.\GD32C10x\Peripherals\src\gd32c10x_exmc.c</FilePath>
             </File>
             <File>
               <FileName>gd32c10x_exti.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\GD32C10x-Firmware\Source\gd32c10x_exti.c</FilePath>
+              <FilePath>.\GD32C10x\Peripherals\src\gd32c10x_exti.c</FilePath>
             </File>
             <File>
               <FileName>gd32c10x_fmc.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\GD32C10x-Firmware\Source\gd32c10x_fmc.c</FilePath>
+              <FilePath>.\GD32C10x\Peripherals\src\gd32c10x_fmc.c</FilePath>
             </File>
             <File>
               <FileName>gd32c10x_fwdgt.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\GD32C10x-Firmware\Source\gd32c10x_fwdgt.c</FilePath>
+              <FilePath>.\GD32C10x\Peripherals\src\gd32c10x_fwdgt.c</FilePath>
             </File>
             <File>
               <FileName>gd32c10x_gpio.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\GD32C10x-Firmware\Source\gd32c10x_gpio.c</FilePath>
+              <FilePath>.\GD32C10x\Peripherals\src\gd32c10x_gpio.c</FilePath>
             </File>
             <File>
               <FileName>gd32c10x_i2c.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\GD32C10x-Firmware\Source\gd32c10x_i2c.c</FilePath>
+              <FilePath>.\GD32C10x\Peripherals\src\gd32c10x_i2c.c</FilePath>
             </File>
             <File>
               <FileName>gd32c10x_misc.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\GD32C10x-Firmware\Source\gd32c10x_misc.c</FilePath>
+              <FilePath>.\GD32C10x\Peripherals\src\gd32c10x_misc.c</FilePath>
             </File>
             <File>
               <FileName>gd32c10x_pmu.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\GD32C10x-Firmware\Source\gd32c10x_pmu.c</FilePath>
+              <FilePath>.\GD32C10x\Peripherals\src\gd32c10x_pmu.c</FilePath>
             </File>
             <File>
               <FileName>gd32c10x_rcu.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\GD32C10x-Firmware\Source\gd32c10x_rcu.c</FilePath>
+              <FilePath>.\GD32C10x\Peripherals\src\gd32c10x_rcu.c</FilePath>
             </File>
             <File>
               <FileName>gd32c10x_rtc.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\GD32C10x-Firmware\Source\gd32c10x_rtc.c</FilePath>
+              <FilePath>.\GD32C10x\Peripherals\src\gd32c10x_rtc.c</FilePath>
             </File>
             <File>
               <FileName>gd32c10x_spi.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\GD32C10x-Firmware\Source\gd32c10x_spi.c</FilePath>
+              <FilePath>.\GD32C10x\Peripherals\src\gd32c10x_spi.c</FilePath>
             </File>
             <File>
               <FileName>gd32c10x_timer.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\GD32C10x-Firmware\Source\gd32c10x_timer.c</FilePath>
+              <FilePath>.\GD32C10x\Peripherals\src\gd32c10x_timer.c</FilePath>
             </File>
             <File>
               <FileName>gd32c10x_usart.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\GD32C10x-Firmware\Source\gd32c10x_usart.c</FilePath>
+              <FilePath>.\GD32C10x\Peripherals\src\gd32c10x_usart.c</FilePath>
             </File>
             <File>
               <FileName>gd32c10x_wwdgt.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\GD32C10x-Firmware\Source\gd32c10x_wwdgt.c</FilePath>
-            </File>
-          </Files>
-        </Group>
-        <Group>
-          <GroupName>GD32C10x-Startup</GroupName>
-          <Files>
-            <File>
-              <FileName>startup_gd32c10x.s</FileName>
-              <FileType>2</FileType>
-              <FilePath>.\GD32C10x-Startup\startup_gd32c10x.s</FilePath>
+              <FilePath>.\GD32C10x\Peripherals\src\gd32c10x_wwdgt.c</FilePath>
             </File>
           </Files>
         </Group>
